--- a/NumberSorter/NumberSorter.WebUI/appsettings.Development.json
+++ b/NumberSorter/NumberSorter.WebUI/appsettings.Development.json
@@ -1,8 +1,11 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+    "ConnectionStrings": {
+        "NumberSorterDatabase": "Server=localhost\\sqlexpress;Database=number_sorter;Trusted_Connection=True;TrustServerCertificate=True;"
+    },
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft.AspNetCore": "Warning"
+        }
     }
-  }
 }
