--- a/NumberSorter/NumberSorter.WebUI/NumberSorter.WebUI.csproj
+++ b/NumberSorter/NumberSorter.WebUI/NumberSorter.WebUI.csproj
@@ -1,9 +1,23 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.2">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="8.0.1" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\NumberSorter.Data\NumberSorter.Data.csproj" />
+    <ProjectReference Include="..\NumberSorter.Services\NumberSorter.Services.csproj" />
+    <ProjectReference Include="..\NumberSorter.Common\NumberSorter.Common.csproj" />
+  </ItemGroup>
 
 </Project>
